- fixed: js script path, updated to arrow functions, hide button mobile footer

--- a/assets/css/indexStylesMobile.css
+++ b/assets/css/indexStylesMobile.css
@@ -133,7 +133,9 @@
         border-radius: 5px;
     }
 
-
+    #topArrow {
+        display: none;
+    }
     
 
 }
